--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^10.4.3",
     "@testing-library/user-event": "^12.0.9",
     "axios": "^0.19.2",
+    "dotenv": "^8.2.0",
     "moment": "^2.27.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
@@ -15,7 +16,7 @@
     "react-scripts": "3.4.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "REACT_APP_STAGE=dev react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -36,7 +37,6 @@
     ]
   },
   "devDependencies": {
-    "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12"
   }
 }
