--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
     "react-moment": "^0.9.7",
-    "react-scripts": "3.4.1"
+    "react-redux": "^7.2.0",
+    "react-scripts": "3.4.1",
+    "redux": "^4.0.5"
   },
   "scripts": {
     "start": "REACT_APP_STAGE=dev react-scripts start",
@@ -38,6 +40,7 @@
     ]
   },
   "devDependencies": {
+    "redux-devtools": "^3.5.0",
     "webpack-cli": "^3.3.12"
   }
 }
