--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "@testing-library/user-event": "^12.0.9",
     "axios": "^0.19.2",
     "dotenv": "^8.2.0",
+    "ipinfo": "^1.3.9",
     "moment": "^2.27.0",
+    "node-ipinfo": "^1.0.1",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -16,7 +18,8 @@
     "react-moment": "^0.9.7",
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.1",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "save": "^2.4.0"
   },
   "scripts": {
     "start": "REACT_APP_STAGE=dev react-scripts start",
