--- a/package.json
+++ b/package.json
@@ -25,8 +25,9 @@
     "react-dom": "16.13.1",
     "react-icons": "3.10.0",
     "react-moment": "0.9.7",
-    "react-scripts": "3.4.1",
-    "save": "2.4.0"
+    "react-scripts": "^3.4.3",
+    "save": "2.4.0",
+    "serialize-javascript": "^4.0.0"
   },
   "devDependencies": {
     "webpack-cli": "3.3.12"
