--- a/package.json
+++ b/package.json
@@ -1,4 +1,13 @@
 {
+  "name": "reactjs_template",
+  "version": "1.0.0",
+  "description": "A template for building reactJS apps.",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack serve --mode development --env development --hot --port 3000",
+    "build": "webpack --mode production"
+  },
   "browserslist": {
     "development": [
       "last 1 chrome version",
@@ -14,10 +23,12 @@
   "dependencies": {
     "@testing-library/jest-dom": "5.11.9",
     "@testing-library/react": "11.2.5",
-    "@testing-library/user-event": "12.7.3",
+    "@testing-library/user-event": "12.8.0",
     "axios": "0.21.1",
     "dotenv": "8.2.0",
+    "html-webpack-plugin": "^5.2.0",
     "ipinfo": "1.5.1",
+    "mini-css-extract-plugin": "^1.3.9",
     "moment": "2.29.1",
     "node-ipinfo": "2.0.1",
     "node-sass": "5.0.0",
@@ -27,21 +38,14 @@
     "react-moment": "1.1.1",
     "react-scripts": "^4.0.3",
     "save": "2.4.0",
-    "serialize-javascript": "^5.0.1"
+    "serialize-javascript": "^5.0.1",
+    "styled-components": "^5.2.1",
+    "webpack-dev-server": "^3.11.2"
   },
   "devDependencies": {
     "webpack-cli": "4.5.0"
   },
   "eslintConfig": {
     "extends": "react-app"
-  },
-  "name": "weather-app",
-  "private": true,
-  "scripts": {
-    "build": "react-scripts build",
-    "eject": "react-scripts eject",
-    "start": "REACT_APP_STAGE=dev react-scripts start",
-    "test": "react-scripts test"
-  },
-  "version": "0.1.0"
+  }
 }
